# calendar_manager

./: .gitignore  pyproject.toml
calendar_manager/: __init__.py  calendar.py  config.py  google.py  static.py
