[tool.poetry]
name = "calendar_manager"
version = "0.1.0"
description = ""
authors = ["Andrew Bates <abates@omeganetserv.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
appdirs = "^1.4.4"
google-api-python-client = "^2.57.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
google-api-python-client-stubs = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
